UI in Buyer Activities
Toolbar and Navigation Drawer UI changed.
UI of All Products Recycler View changed.

--- a/app/src/main/res/layout/card_view_all_products.xml
+++ b/app/src/main/res/layout/card_view_all_products.xml
@@ -5,93 +5,99 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_all_products"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        app:cardCornerRadius="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
+    <LinearLayout
+        android:id="@+id/ll_image"
+        android:layout_width="100dp"
+        android:layout_height="130dp"
+        android:background="#f8f8f8"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height = "match_parent">
+        app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/im_all_products_img"
-                android:layout_width="80dp"
-                android:layout_height="85dp"
-                android:layout_margin="5dp"
-                android:src="@drawable/ic_profile"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+        <ImageView
+            android:id="@+id/im_all_products_img"
+            android:layout_width="80dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_profile"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_all_products_name"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="Hello"
-                android:paddingLeft="5dp"
-                android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.348"
-                app:layout_constraintStart_toEndOf="@+id/im_all_products_img"
-                app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tv_all_products_name"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="30dp"
+        android:paddingLeft="5dp"
+        android:text="Hello"
+        android:textSize="26sp"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toEndOf="@+id/ll_image"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tv3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="4dp"
-                android:paddingLeft="5dp"
-                android:text="MRP : "
-                android:textColor="@color/black"
-                app:layout_constraintStart_toEndOf="@+id/im_all_products_img"
-                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_name" />
+    <TextView
+        android:id="@+id/tv3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="8dp"
+        android:paddingLeft="5dp"
+        android:text="MRP : "
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toEndOf="@id/ll_image"
+        app:layout_constraintTop_toBottomOf="@+id/tv_all_products_name" />
 
-            <TextView
-                android:id="@+id/tv_all_products_mrp"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:hint="MRP"
-                android:paddingLeft="5dp"
-                android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/tv3"
-                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_name" />
+    <TextView
+        android:id="@+id/tv_all_products_mrp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="MRP"
+        android:paddingLeft="5dp"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/tv3"
+        app:layout_constraintTop_toBottomOf="@+id/tv_all_products_name" />
 
-            <TextView
-                android:id="@+id/tv5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="8dp"
-                android:paddingLeft="5dp"
-                android:text="Special Price : "
-                android:textColor="@color/black"
-                app:layout_constraintStart_toEndOf="@+id/im_all_products_img"
-                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_mrp" />
+    <TextView
+        android:id="@+id/tv5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="8dp"
+        android:paddingLeft="5dp"
+        android:text="Special Price : "
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toEndOf="@id/ll_image"
+        app:layout_constraintTop_toBottomOf="@+id/tv_all_products_mrp" />
 
-            <TextView
-                android:id="@+id/tv_all_products_dp"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:hint="discounted price"
-                android:paddingLeft="5dp"
-                android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/tv5"
-                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_mrp" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/tv_all_products_dp"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="discounted price"
+        android:paddingLeft="5dp"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/tv5"
+        app:layout_constraintTop_toBottomOf="@+id/tv_all_products_mrp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#9A9A9A"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
