--- a/app/src/main/res/layout/activity_buyer_orders.xml
+++ b/app/src/main/res/layout/activity_buyer_orders.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Buyer_orders">
 
     <RelativeLayout
@@ -50,7 +51,9 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/buyer_order_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize" />
+                android:layout_height="?attr/actionBarSize"
+                android:background="#4586f2"
+                app:title="Orders" />
 
         </com.google.android.material.appbar.AppBarLayout>
     </RelativeLayout>
@@ -60,6 +63,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/white"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="#3C3C3C"
+        android:theme="@style/NavigationView"
         app:headerLayout="@layout/left_nav_header"
         app:menu="@menu/menu_buyer">
 
