--- a/app/src/main/res/layout/buyer_all_products.xml
+++ b/app/src/main/res/layout/buyer_all_products.xml
@@ -5,6 +5,7 @@
     android:id="@+id/buyer_left_nav"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Buyer_All_Products">
 
 
@@ -52,7 +53,8 @@
                 android:id="@+id/buyer_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                />
+                android:background="#4586f2"
+                app:title="All Products" />
 
                 <!--            <androidx.appcompat.widget.Toolbar-->
                 <!--                android:id="@+id/buyer_toolbar"-->
@@ -76,6 +78,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/white"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="#3C3C3C"
+        android:theme="@style/NavigationView"
         app:headerLayout="@layout/left_nav_header"
         app:menu="@menu/menu_buyer">
 
