--- a/app/src/main/res/layout/left_nav_header.xml
+++ b/app/src/main/res/layout/left_nav_header.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="#3480df"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
@@ -16,30 +16,28 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            //cicular image view for profile image
-
-            //text view for seller name
-
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/im_left_nav_profile"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="3dp"
-                android:src="@drawable/ic_profile" />
+                android:layout_marginTop="7dp"
+                android:src="@drawable/ic_profile_white" />
 
             <TextView
                 android:id="@+id/tv_left_nav_name"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="26dp"
-                android:layout_marginTop="11dp"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="15dp"
                 android:layout_toEndOf="@+id/im_left_nav_profile"
                 android:hint="@string/user_name"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
                 android:textSize="20sp" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
