--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textColorSecondary">@color/black</item>
     </style>
+
+    <style name="NavigationView">
+        <item name="android:textColorSecondary">#3C3C3C</item>
+        <item name="android:listDivider">@color/black</item>
+    </style>
+
 </resources>
