--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    
+    <style name="NavigationView">
+        <item name="android:textColorSecondary">#3C3C3C</item>
+        <item name="android:listDivider">@color/black</item>
+    </style>
 </resources>
