UI of Buyer Orders
UI of Buyer Orders Recycler View changed.

--- a/app/src/main/res/layout/buyer_all_products.xml
+++ b/app/src/main/res/layout/buyer_all_products.xml
@@ -8,15 +8,14 @@
     android:background="@color/white"
     tools:context=".Buyer_All_Products">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_buyer_products"
-            android:layout_width="wrap_content"
-            android:layout_height="609dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/appbar"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
