--- a/app/src/main/res/layout/activity_buyer_orders.xml
+++ b/app/src/main/res/layout/activity_buyer_orders.xml
@@ -14,8 +14,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_buyer_orders"
-            android:layout_width="389dp"
-            android:layout_height="603dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/appbar_buyer_order"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
