--- a/app/src/main/res/layout/activity_seller_products.xml
+++ b/app/src/main/res/layout/activity_seller_products.xml
@@ -24,13 +24,14 @@
             android:text="No Orders yet. Check again later"
             android:layout_centerInParent="true"
             />
+
         <androidx.recyclerview.widget.RecyclerView
-           android:paddingTop="12dp"
             android:id="@+id/rv_seller_products"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/seller_products_toolbar"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:paddingTop="12dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatingButton"
