Bugs and Errors Fixed and UI changes.
Errors in Adapter_Buyer_Orders.kt and
Buyer_OrderDescription.kt solved.

UI changes in activity_seller_orders.xml and
activity_seller_products.xml regarding toolbar
and other minor changes

--- a/app/src/main/res/layout/buyer_all_products.xml
+++ b/app/src/main/res/layout/buyer_all_products.xml
@@ -53,7 +53,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="#4586f2"
-                app:title="All Products" />
+                app:title="All Products"
+                app:titleTextColor="@color/white"/>
 
                 <!--            <androidx.appcompat.widget.Toolbar-->
                 <!--                android:id="@+id/buyer_toolbar"-->
