--- a/app/src/main/res/layout/activity_seller_orders.xml
+++ b/app/src/main/res/layout/activity_seller_orders.xml
@@ -11,10 +11,12 @@
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
-            android:id= "@+id/seller_orders_toolbar"
+            android:id="@+id/seller_orders_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/black"/>
+            android:background="#4586f2"
+            app:title="Orders"
+            app:titleTextColor="@color/white"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_seller_orders"
