--- a/app/src/main/res/layout/activity_seller_products.xml
+++ b/app/src/main/res/layout/activity_seller_products.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".SellerProducts">
 
     <RelativeLayout
@@ -15,22 +16,26 @@
             android:id="@+id/seller_products_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/black"/>
+            android:background="#4586f2"
+            app:title="All Products"
+            app:titleTextColor="@color/white" />
 
         <TextView
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No Orders yet. Check again later"
+            android:textColor="@color/black"
             android:layout_centerInParent="true"
             />
+
         <androidx.recyclerview.widget.RecyclerView
-           android:paddingTop="12dp"
             android:id="@+id/rv_seller_products"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/seller_products_toolbar"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:paddingTop="12dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatingButton"
@@ -49,6 +54,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/white"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="#3C3C3C"
+        android:theme="@style/NavigationView"
         app:headerLayout="@layout/left_nav_header"
         app:menu="@menu/menu_seller" />
 </androidx.drawerlayout.widget.DrawerLayout>
