--- a/app/src/main/res/layout/activity_seller_order_description.xml
+++ b/app/src/main/res/layout/activity_seller_order_description.xml
@@ -186,6 +186,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="12dp"
+                    android:visibility="visible"
                     android:text="Aceept" />
 
                 <Button
