UI changes in activity_seller_products.xml, activity_seller_orders.xml,  activity_buyer_order_description.xml,  activity_seller_add_product.xml.

--- a/app/src/main/res/layout/activity_seller_add_product.xml
+++ b/app/src/main/res/layout/activity_seller_add_product.xml
@@ -4,68 +4,110 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".SellerAddProduct">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#3f3f41"
-        app:titleTextColor="@color/white" />
+        android:background="#4586f2"
+        app:title="Add Products"
+        app:titleTextColor="@color/white">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/img_seller_add_prod_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_arrow_back"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                android:text="Add Products"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/img_seller_add_prod_back"
+                app:layout_constraintTop_toTopOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.appcompat.widget.Toolbar>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_below="@id/app_bar"
-        >
-
-
+        android:orientation="vertical">
 
 
         <EditText
             android:id="@+id/et_product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="70dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:hint="Product Name"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:textColorHint="#808080" />
 
         <EditText
             android:id="@+id/et_productDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:hint="Product Description"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:textColorHint="#808080" />
 
         <EditText
             android:id="@+id/et_MRP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:hint="MRP"
             android:inputType="number"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:textColorHint="#808080" />
 
         <EditText
             android:id="@+id/et_product_discountedPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:hint="Discounted Price"
             android:inputType="number"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:textColorHint="#808080" />
 
         <EditText
             android:id="@+id/et_minQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:hint="Minimum Quantity for discount"
             android:inputType="number"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:textColorHint="#808080" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -73,6 +115,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:background="#f8f8f8"
             android:padding="8dp">
 
             <ImageView
@@ -90,6 +133,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Add Image"
+                android:textColor="#808080"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
@@ -99,14 +143,16 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/bt_addProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="12dp"
-            android:padding="8dp"
-            android:text="add product" />
+            android:background="@drawable/back_button"
+            android:padding="10dp"
+            android:text="add product"
+            android:textColor="@color/white" />
 
 
     </LinearLayout>
