--- a/app/src/main/res/layout/activity_seller_orders.xml
+++ b/app/src/main/res/layout/activity_seller_orders.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/seller_orders_left_nav"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SellerOrders">
@@ -16,7 +17,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="#4586f2"
             app:title="Orders"
-            app:titleTextColor="@color/white"/>
+            app:titleTextColor="@color/white" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_seller_orders"
@@ -48,6 +49,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/white"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="#3C3C3C"
+        android:theme="@style/NavigationView"
         app:headerLayout="@layout/left_nav_header"
         app:menu="@menu/menu_seller">
     </com.google.android.material.navigation.NavigationView>
