--- a/app/src/main/res/layout/activity_seller_products.xml
+++ b/app/src/main/res/layout/activity_seller_products.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="#4586f2"
-            app:title="All Products"
+            app:title="Your Products"
             app:titleTextColor="@color/white" />
 
         <TextView
