--- a/app/src/main/res/layout/seller_all_products.xml
+++ b/app/src/main/res/layout/seller_all_products.xml
@@ -5,6 +5,7 @@
     android:id="@+id/seller_left_nav"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Seller_All_Products">
 
 
@@ -35,7 +36,9 @@
             android:id="@+id/seller_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            />
+            android:background="#4586f2"
+            app:title="All Products"
+            app:titleTextColor="@color/white" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -62,6 +65,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/white"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="#3C3C3C"
+        android:theme="@style/NavigationView"
         app:headerLayout="@layout/left_nav_header"
         app:menu="@menu/menu_seller">
 
